set(TARGET_NAME EditorApp)

file(GLOB_RECURSE EDITOR_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.h)
file(GLOB_RECURSE EDITOR_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${EDITOR_HEADERS} ${EDITOR_SOURCES} ${EDITOR_RESOURCE})

include_directories( 
	${APP_COMMON_INCLUDE} 
	${CMAKE_CURRENT_SOURCE_DIR}/source/
)

add_compile_definitions("EDITOR_ASSETS_DIR=${CMAKE_CURRENT_SOURCE_DIR}/resources/")
add_compile_definitions("ENGINE_PROJECT_PATH=${CMAKE_CURRENT_SOURCE_DIR}/project/")

add_executable(${TARGET_NAME} ${EDITOR_HEADERS} ${EDITOR_SOURCES} ${EDITOR_RESOURCE})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17 OUTPUT_NAME ${TARGET_NAME})
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "editor")
set_target_properties(${TARGET_NAME} PROPERTIES DEBUG_POSTFIX "_d")     # debug 可执行文件的后缀名

target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")

target_link_libraries(${TARGET_NAME} PUBLIC engineRuntime imgui glfw)


#设置编译的运行程序输出路径
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX})
