set(TARGET_NAME engineRuntime)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


file(GLOB_RECURSE RUNTIME_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE RUNTIME_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE RUNTIME_GLAB   ${THIRD_SOURCE_DIR}/glad/src/glad.c)
file(GLOB_RECURSE RUNTIME_GLAB_HEADS CONFIGURE_DEPENDS ${THIRD_SOURCE_DIR}/glad/include/*.h)
file(GLOB_RECURSE RUNTIME_GLM_HEADS CONFIGURE_DEPENDS ${THIRD_SOURCE_DIR}/glm/glm/*.hpp)


set(ENGINE_RUNTIME_HEADS "${THIRD_SOURCE_DIR}/glm/
	${CMAKE_CURRENT_SOURCE_DIR}
	${THIRD_SOURCE_DIR}/glad/include/" PARENT_SCOPE)

include_directories(
	${THIRD_SOURCE_DIR}/glm/
	${CMAKE_CURRENT_SOURCE_DIR}
	${THIRD_SOURCE_DIR}/glad/include/
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES 
	${RUNTIME_HEADERS} 
	${RUNTIME_SOURCES})

source_group(TREE "${THIRD_SOURCE_DIR}" FILES 
	${RUNTIME_GLAB} 
	${RUNTIME_GLAB_HEADS}
	${RUNTIME_GLM_HEADS})

add_library(${TARGET_NAME} ${RUNTIME_HEADERS} 
	${RUNTIME_SOURCES}
	${RUNTIME_GLAB})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "engine")

target_link_libraries(${TARGET_NAME} PUBLIC glfw)
target_link_libraries(${TARGET_NAME} PUBLIC imgui)
target_link_libraries(${TARGET_NAME} PUBLIC stb)

