set(TARGET_NAME GameApp)

file(GLOB_RECURSE GAME_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.h)
file(GLOB_RECURSE GAME_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${GAME_HEADERS} ${GAME_SOURCES} ${GAME_RESOURCE})

include_directories( 
	${APP_COMMON_INCLUDE} 
	${CMAKE_CURRENT_SOURCE_DIR}/source/
)

add_compile_definitions("ENGINE_ASSETS_DIR=${ENGINE_ASSETS_DIR}")
add_compile_definitions("GAME_RESOURCE=${CMAKE_CURRENT_SOURCE_DIR}/resources/")

add_executable(${TARGET_NAME} ${GAME_HEADERS} ${GAME_SOURCES} ${GAME_RESOURCE})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17 OUTPUT_NAME ${TARGET_NAME})
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "game")
set_target_properties(${TARGET_NAME} PROPERTIES DEBUG_POSTFIX "_d")     # debug 可执行文件的后缀名

target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")
target_link_libraries(${TARGET_NAME} engineRuntime)

#设置编译的运行程序输出路径
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX})